# serializer version: 1
# name: test_all_missing_from_multiple_rows_pd
  '''
  <tbody class="gt_table_body">
    <tr>
      <td style="color: #FFFFFF; background-color: #FF0000;" class="gt_row gt_right">None</td>
      <td class="gt_row gt_right">3</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #FF0000;" class="gt_row gt_right">None</td>
      <td class="gt_row gt_right">6</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_all_missing_from_multiple_rows_pl
  '''
  <tbody class="gt_table_body">
    <tr>
      <td style="color: #FFFFFF; background-color: #FF0000;" class="gt_row gt_center">None</td>
      <td class="gt_row gt_right">3</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #FF0000;" class="gt_row gt_center">None</td>
      <td class="gt_row gt_right">6</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_all_values_have_zero_range_domain_pd
  '''
  <tbody class="gt_table_body">
    <tr>
      <td style="color: #FFFFFF; background-color: #008000;" class="gt_row gt_right">2.0</td>
      <td class="gt_row gt_right">3</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #008000;" class="gt_row gt_right">2.0</td>
      <td class="gt_row gt_right">4</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #808080;" class="gt_row gt_right">None</td>
      <td class="gt_row gt_right">5</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #808080;" class="gt_row gt_right">None</td>
      <td class="gt_row gt_right">6</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_all_values_have_zero_range_domain_pl
  '''
  <tbody class="gt_table_body">
    <tr>
      <td style="color: #FFFFFF; background-color: #008000;" class="gt_row gt_right">2</td>
      <td class="gt_row gt_right">3</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #008000;" class="gt_row gt_right">2</td>
      <td class="gt_row gt_right">4</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #808080;" class="gt_row gt_right">None</td>
      <td class="gt_row gt_right">5</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #808080;" class="gt_row gt_right">None</td>
      <td class="gt_row gt_right">6</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_data_color_autocolor_text_false[pandas]
  '''
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_right">0.1111</td>
      <td class="gt_row gt_left">apricot</td>
      <td style="background-color: #ff0000;" class="gt_row gt_right">49.95</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">2.222</td>
      <td class="gt_row gt_left">banana</td>
      <td style="background-color: #5c5200;" class="gt_row gt_right">17.95</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">33.33</td>
      <td class="gt_row gt_left">coconut</td>
      <td style="background-color: #077c00;" class="gt_row gt_right">1.39</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">444.4</td>
      <td class="gt_row gt_left">durian</td>
      <td style="background-color: #0000FF;" class="gt_row gt_right">65100.0</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_data_color_autocolor_text_false[polars]
  '''
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_right">0.1111</td>
      <td class="gt_row gt_left">apricot</td>
      <td style="background-color: #ff0000;" class="gt_row gt_right">49.95</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">2.222</td>
      <td class="gt_row gt_left">banana</td>
      <td style="background-color: #5c5200;" class="gt_row gt_right">17.95</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">33.33</td>
      <td class="gt_row gt_left">coconut</td>
      <td style="background-color: #077c00;" class="gt_row gt_right">1.39</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">444.4</td>
      <td class="gt_row gt_left">durian</td>
      <td style="background-color: #0000FF;" class="gt_row gt_right">65100.0</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_data_color_autocolor_text_false[pyarrow]
  '''
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_right">0.1111</td>
      <td class="gt_row gt_left">apricot</td>
      <td style="background-color: #ff0000;" class="gt_row gt_right">49.95</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">2.222</td>
      <td class="gt_row gt_left">banana</td>
      <td style="background-color: #5c5200;" class="gt_row gt_right">17.95</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">33.33</td>
      <td class="gt_row gt_left">coconut</td>
      <td style="background-color: #077c00;" class="gt_row gt_right">1.39</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">444.4</td>
      <td class="gt_row gt_left">durian</td>
      <td style="background-color: #0000FF;" class="gt_row gt_right">65100.0</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_data_color_colorbrewer_snap
  '''
  <tbody class="gt_table_body">
    <tr>
      <td style="color: #000000; background-color: #f7fcf5;" class="gt_row gt_right">1</td>
      <td style="color: #FFFFFF; background-color: #00441b;" class="gt_row gt_right">10</td>
      <td class="gt_row gt_left">one</td>
    </tr>
    <tr>
      <td style="color: #000000; background-color: #c7e9c0;" class="gt_row gt_right">2</td>
      <td style="color: #FFFFFF; background-color: #238b45;" class="gt_row gt_right">9</td>
      <td class="gt_row gt_left">two</td>
    </tr>
    <tr>
      <td style="color: #000000; background-color: #74c476;" class="gt_row gt_right">3</td>
      <td style="color: #000000; background-color: #74c476;" class="gt_row gt_right">8</td>
      <td class="gt_row gt_left">three</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #238b45;" class="gt_row gt_right">4</td>
      <td style="color: #000000; background-color: #c7e9c0;" class="gt_row gt_right">7</td>
      <td class="gt_row gt_left">four</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #00441b;" class="gt_row gt_right">5</td>
      <td style="color: #000000; background-color: #f7fcf5;" class="gt_row gt_right">6</td>
      <td class="gt_row gt_left">five</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_data_color_domain_na_color_reverse_snap[pandas]
  '''
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_right">0.1111</td>
      <td class="gt_row gt_left">apricot</td>
      <td style="color: #FFFFFF; background-color: #ff0000;" class="gt_row gt_right">49.95</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">2.222</td>
      <td class="gt_row gt_left">banana</td>
      <td style="color: #FFFFFF; background-color: #5c5200;" class="gt_row gt_right">17.95</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">33.33</td>
      <td class="gt_row gt_left">coconut</td>
      <td style="color: #FFFFFF; background-color: #077c00;" class="gt_row gt_right">1.39</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">444.4</td>
      <td class="gt_row gt_left">durian</td>
      <td style="color: #FFFFFF; background-color: #0000FF;" class="gt_row gt_right">65100.0</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_data_color_domain_na_color_reverse_snap[polars]
  '''
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_right">0.1111</td>
      <td class="gt_row gt_left">apricot</td>
      <td style="color: #FFFFFF; background-color: #ff0000;" class="gt_row gt_right">49.95</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">2.222</td>
      <td class="gt_row gt_left">banana</td>
      <td style="color: #FFFFFF; background-color: #5c5200;" class="gt_row gt_right">17.95</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">33.33</td>
      <td class="gt_row gt_left">coconut</td>
      <td style="color: #FFFFFF; background-color: #077c00;" class="gt_row gt_right">1.39</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">444.4</td>
      <td class="gt_row gt_left">durian</td>
      <td style="color: #FFFFFF; background-color: #0000FF;" class="gt_row gt_right">65100.0</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_data_color_domain_na_color_reverse_snap[pyarrow]
  '''
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_right">0.1111</td>
      <td class="gt_row gt_left">apricot</td>
      <td style="color: #FFFFFF; background-color: #ff0000;" class="gt_row gt_right">49.95</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">2.222</td>
      <td class="gt_row gt_left">banana</td>
      <td style="color: #FFFFFF; background-color: #5c5200;" class="gt_row gt_right">17.95</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">33.33</td>
      <td class="gt_row gt_left">coconut</td>
      <td style="color: #FFFFFF; background-color: #077c00;" class="gt_row gt_right">1.39</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">444.4</td>
      <td class="gt_row gt_left">durian</td>
      <td style="color: #FFFFFF; background-color: #0000FF;" class="gt_row gt_right">65100.0</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_data_color_domain_na_color_snap[pandas]
  '''
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_right">0.1111</td>
      <td class="gt_row gt_left">apricot</td>
      <td style="color: #FFFFFF; background-color: #008000;" class="gt_row gt_right">49.95</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">2.222</td>
      <td class="gt_row gt_left">banana</td>
      <td style="color: #FFFFFF; background-color: #a32e00;" class="gt_row gt_right">17.95</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">33.33</td>
      <td class="gt_row gt_left">coconut</td>
      <td style="color: #FFFFFF; background-color: #f80400;" class="gt_row gt_right">1.39</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">444.4</td>
      <td class="gt_row gt_left">durian</td>
      <td style="color: #FFFFFF; background-color: #0000FF;" class="gt_row gt_right">65100.0</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_data_color_domain_na_color_snap[polars]
  '''
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_right">0.1111</td>
      <td class="gt_row gt_left">apricot</td>
      <td style="color: #FFFFFF; background-color: #008000;" class="gt_row gt_right">49.95</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">2.222</td>
      <td class="gt_row gt_left">banana</td>
      <td style="color: #FFFFFF; background-color: #a32e00;" class="gt_row gt_right">17.95</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">33.33</td>
      <td class="gt_row gt_left">coconut</td>
      <td style="color: #FFFFFF; background-color: #f80400;" class="gt_row gt_right">1.39</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">444.4</td>
      <td class="gt_row gt_left">durian</td>
      <td style="color: #FFFFFF; background-color: #0000FF;" class="gt_row gt_right">65100.0</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_data_color_domain_na_color_snap[pyarrow]
  '''
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_right">0.1111</td>
      <td class="gt_row gt_left">apricot</td>
      <td style="color: #FFFFFF; background-color: #008000;" class="gt_row gt_right">49.95</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">2.222</td>
      <td class="gt_row gt_left">banana</td>
      <td style="color: #FFFFFF; background-color: #a32e00;" class="gt_row gt_right">17.95</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">33.33</td>
      <td class="gt_row gt_left">coconut</td>
      <td style="color: #FFFFFF; background-color: #f80400;" class="gt_row gt_right">1.39</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">444.4</td>
      <td class="gt_row gt_left">durian</td>
      <td style="color: #FFFFFF; background-color: #0000FF;" class="gt_row gt_right">65100.0</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_data_color_fn_snap
  '''
  <tbody class="gt_table_body">
    <tr>
      <td style="color: #000000; background-color: #FFA500;" class="gt_row gt_right">0.1111</td>
      <td style="color: #000000; background-color: #FFA500;" class="gt_row gt_left">apricot</td>
      <td class="gt_row gt_left">one</td>
      <td class="gt_row gt_right">2015-01-15</td>
      <td class="gt_row gt_right">13:35</td>
      <td class="gt_row gt_right">2018-01-01 02:22</td>
      <td class="gt_row gt_right">49.95</td>
      <td class="gt_row gt_left">row_1</td>
      <td class="gt_row gt_left">grp_a</td>
    </tr>
    <tr>
      <td style="color: #000000; background-color: #ADD8E6;" class="gt_row gt_right">2.222</td>
      <td style="color: #000000; background-color: #ADD8E6;" class="gt_row gt_left">banana</td>
      <td class="gt_row gt_left">two</td>
      <td class="gt_row gt_right">2015-02-15</td>
      <td class="gt_row gt_right">14:40</td>
      <td class="gt_row gt_right">2018-02-02 14:33</td>
      <td class="gt_row gt_right">17.95</td>
      <td class="gt_row gt_left">row_2</td>
      <td class="gt_row gt_left">grp_a</td>
    </tr>
    <tr>
      <td style="color: #000000; background-color: #FFA500;" class="gt_row gt_right">33.33</td>
      <td style="color: #000000; background-color: #FFA500;" class="gt_row gt_left">coconut</td>
      <td class="gt_row gt_left">three</td>
      <td class="gt_row gt_right">2015-03-15</td>
      <td class="gt_row gt_right">15:45</td>
      <td class="gt_row gt_right">2018-03-03 03:44</td>
      <td class="gt_row gt_right">1.39</td>
      <td class="gt_row gt_left">row_3</td>
      <td class="gt_row gt_left">grp_a</td>
    </tr>
    <tr>
      <td style="color: #000000; background-color: #ADD8E6;" class="gt_row gt_right">444.4</td>
      <td style="color: #000000; background-color: #ADD8E6;" class="gt_row gt_left">durian</td>
      <td class="gt_row gt_left">four</td>
      <td class="gt_row gt_right">2015-04-15</td>
      <td class="gt_row gt_right">16:50</td>
      <td class="gt_row gt_right">2018-04-04 15:55</td>
      <td class="gt_row gt_right">65100.0</td>
      <td class="gt_row gt_left">row_4</td>
      <td class="gt_row gt_left">grp_a</td>
    </tr>
    <tr>
      <td style="color: #000000; background-color: #FFA500;" class="gt_row gt_right">5550.0</td>
      <td style="color: #000000; background-color: #FFA500;" class="gt_row gt_left">None</td>
      <td class="gt_row gt_left">five</td>
      <td class="gt_row gt_right">2015-05-15</td>
      <td class="gt_row gt_right">17:55</td>
      <td class="gt_row gt_right">2018-05-05 04:00</td>
      <td class="gt_row gt_right">1325.81</td>
      <td class="gt_row gt_left">row_5</td>
      <td class="gt_row gt_left">grp_b</td>
    </tr>
    <tr>
      <td style="color: #000000; background-color: #ADD8E6;" class="gt_row gt_right">None</td>
      <td style="color: #000000; background-color: #ADD8E6;" class="gt_row gt_left">fig</td>
      <td class="gt_row gt_left">six</td>
      <td class="gt_row gt_right">2015-06-15</td>
      <td class="gt_row gt_right">None</td>
      <td class="gt_row gt_right">2018-06-06 16:11</td>
      <td class="gt_row gt_right">13.255</td>
      <td class="gt_row gt_left">row_6</td>
      <td class="gt_row gt_left">grp_b</td>
    </tr>
    <tr>
      <td style="color: #000000; background-color: #FFA500;" class="gt_row gt_right">777000.0</td>
      <td style="color: #000000; background-color: #FFA500;" class="gt_row gt_left">grapefruit</td>
      <td class="gt_row gt_left">seven</td>
      <td class="gt_row gt_right">None</td>
      <td class="gt_row gt_right">19:10</td>
      <td class="gt_row gt_right">2018-07-07 05:22</td>
      <td class="gt_row gt_right">None</td>
      <td class="gt_row gt_left">row_7</td>
      <td class="gt_row gt_left">grp_b</td>
    </tr>
    <tr>
      <td style="color: #000000; background-color: #ADD8E6;" class="gt_row gt_right">8880000.0</td>
      <td style="color: #000000; background-color: #ADD8E6;" class="gt_row gt_left">honeydew</td>
      <td class="gt_row gt_left">eight</td>
      <td class="gt_row gt_right">2015-08-15</td>
      <td class="gt_row gt_right">20:20</td>
      <td class="gt_row gt_right">None</td>
      <td class="gt_row gt_right">0.44</td>
      <td class="gt_row gt_left">row_8</td>
      <td class="gt_row gt_left">grp_b</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_data_color_overlapping_domain[pandas]
  '''
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_right">0.1111</td>
      <td class="gt_row gt_left">apricot</td>
      <td style="color: #FFFFFF; background-color: #FF0000;" class="gt_row gt_right">49.95</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">2.222</td>
      <td class="gt_row gt_left">banana</td>
      <td style="color: #FFFFFF; background-color: #FF0000;" class="gt_row gt_right">17.95</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">33.33</td>
      <td class="gt_row gt_left">coconut</td>
      <td style="color: #FFFFFF; background-color: #FF0000;" class="gt_row gt_right">1.39</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">444.4</td>
      <td class="gt_row gt_left">durian</td>
      <td style="color: #FFFFFF; background-color: #673498;" class="gt_row gt_right">65100.0</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_data_color_overlapping_domain[polars]
  '''
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_right">0.1111</td>
      <td class="gt_row gt_left">apricot</td>
      <td style="color: #FFFFFF; background-color: #FF0000;" class="gt_row gt_right">49.95</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">2.222</td>
      <td class="gt_row gt_left">banana</td>
      <td style="color: #FFFFFF; background-color: #FF0000;" class="gt_row gt_right">17.95</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">33.33</td>
      <td class="gt_row gt_left">coconut</td>
      <td style="color: #FFFFFF; background-color: #FF0000;" class="gt_row gt_right">1.39</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">444.4</td>
      <td class="gt_row gt_left">durian</td>
      <td style="color: #FFFFFF; background-color: #673498;" class="gt_row gt_right">65100.0</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_data_color_overlapping_domain[pyarrow]
  '''
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_right">0.1111</td>
      <td class="gt_row gt_left">apricot</td>
      <td style="color: #FFFFFF; background-color: #FF0000;" class="gt_row gt_right">49.95</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">2.222</td>
      <td class="gt_row gt_left">banana</td>
      <td style="color: #FFFFFF; background-color: #FF0000;" class="gt_row gt_right">17.95</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">33.33</td>
      <td class="gt_row gt_left">coconut</td>
      <td style="color: #FFFFFF; background-color: #FF0000;" class="gt_row gt_right">1.39</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">444.4</td>
      <td class="gt_row gt_left">durian</td>
      <td style="color: #FFFFFF; background-color: #673498;" class="gt_row gt_right">65100.0</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_data_color_palette_snap[pandas]
  '''
  <tbody class="gt_table_body">
    <tr>
      <td style="color: #FFFFFF; background-color: #ff0000;" class="gt_row gt_right">0.1111</td>
      <td class="gt_row gt_left">apricot</td>
      <td style="color: #FFFFFF; background-color: #ff0000;" class="gt_row gt_right">49.95</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #fe0100;" class="gt_row gt_right">2.222</td>
      <td class="gt_row gt_left">banana</td>
      <td style="color: #FFFFFF; background-color: #ff0000;" class="gt_row gt_right">17.95</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #ec0a00;" class="gt_row gt_right">33.33</td>
      <td class="gt_row gt_left">coconut</td>
      <td style="color: #FFFFFF; background-color: #ff0000;" class="gt_row gt_right">1.39</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #008000;" class="gt_row gt_right">444.4</td>
      <td class="gt_row gt_left">durian</td>
      <td style="color: #FFFFFF; background-color: #008000;" class="gt_row gt_right">65100.0</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_data_color_palette_snap[polars]
  '''
  <tbody class="gt_table_body">
    <tr>
      <td style="color: #FFFFFF; background-color: #ff0000;" class="gt_row gt_right">0.1111</td>
      <td class="gt_row gt_left">apricot</td>
      <td style="color: #FFFFFF; background-color: #ff0000;" class="gt_row gt_right">49.95</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #fe0100;" class="gt_row gt_right">2.222</td>
      <td class="gt_row gt_left">banana</td>
      <td style="color: #FFFFFF; background-color: #ff0000;" class="gt_row gt_right">17.95</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #ec0a00;" class="gt_row gt_right">33.33</td>
      <td class="gt_row gt_left">coconut</td>
      <td style="color: #FFFFFF; background-color: #ff0000;" class="gt_row gt_right">1.39</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #008000;" class="gt_row gt_right">444.4</td>
      <td class="gt_row gt_left">durian</td>
      <td style="color: #FFFFFF; background-color: #008000;" class="gt_row gt_right">65100.0</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_data_color_palette_snap[pyarrow]
  '''
  <tbody class="gt_table_body">
    <tr>
      <td style="color: #FFFFFF; background-color: #ff0000;" class="gt_row gt_right">0.1111</td>
      <td class="gt_row gt_left">apricot</td>
      <td style="color: #FFFFFF; background-color: #ff0000;" class="gt_row gt_right">49.95</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #fe0100;" class="gt_row gt_right">2.222</td>
      <td class="gt_row gt_left">banana</td>
      <td style="color: #FFFFFF; background-color: #ff0000;" class="gt_row gt_right">17.95</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #ec0a00;" class="gt_row gt_right">33.33</td>
      <td class="gt_row gt_left">coconut</td>
      <td style="color: #FFFFFF; background-color: #ff0000;" class="gt_row gt_right">1.39</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #008000;" class="gt_row gt_right">444.4</td>
      <td class="gt_row gt_left">durian</td>
      <td style="color: #FFFFFF; background-color: #008000;" class="gt_row gt_right">65100.0</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_data_color_pd_cols_rows_snap
  '''
  <tbody class="gt_table_body">
    <tr>
      <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">1</td>
      <td class="gt_row gt_right">51</td>
    </tr>
    <tr>
      <td style="color: #000000; background-color: #80b156;" class="gt_row gt_right">2</td>
      <td class="gt_row gt_right">52</td>
    </tr>
    <tr>
      <td style="color: #000000; background-color: #25bce6;" class="gt_row gt_right">3</td>
      <td class="gt_row gt_right">53</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #d73a91;" class="gt_row gt_right">4</td>
      <td class="gt_row gt_right">54</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #9e9e9e;" class="gt_row gt_right">5</td>
      <td class="gt_row gt_right">55</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">200</td>
      <td class="gt_row gt_right">200</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_data_color_pl_cols_rows_snap
  '''
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_right">1</td>
      <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">51</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">2</td>
      <td style="color: #000000; background-color: #80b156;" class="gt_row gt_right">52</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">3</td>
      <td style="color: #000000; background-color: #25bce6;" class="gt_row gt_right">53</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">4</td>
      <td style="color: #FFFFFF; background-color: #d73a91;" class="gt_row gt_right">54</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">5</td>
      <td style="color: #FFFFFF; background-color: #9e9e9e;" class="gt_row gt_right">55</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">200</td>
      <td class="gt_row gt_right">200</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_data_color_simple_df_snap
  '''
  <tbody class="gt_table_body">
    <tr>
      <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">1</td>
      <td style="color: #FFFFFF; background-color: #9e9e9e;" class="gt_row gt_right">10</td>
      <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_left">one</td>
    </tr>
    <tr>
      <td style="color: #000000; background-color: #25bce6;" class="gt_row gt_right">2</td>
      <td style="color: #000000; background-color: #25bce6;" class="gt_row gt_right">9</td>
      <td style="color: #000000; background-color: #25bce6;" class="gt_row gt_left">two</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #9e9e9e;" class="gt_row gt_right">3</td>
      <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">8</td>
      <td style="color: #FFFFFF; background-color: #9e9e9e;" class="gt_row gt_left">three</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_data_color_simple_exibble_snap[pandas]
  '''
  <tbody class="gt_table_body">
    <tr>
      <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">0.1111</td>
      <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_left">apricot</td>
      <td style="color: #FFFFFF; background-color: #010001;" class="gt_row gt_right">49.95</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #070304;" class="gt_row gt_right">2.222</td>
      <td style="color: #000000; background-color: #4cbd81;" class="gt_row gt_left">banana</td>
      <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">17.95</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #752b38;" class="gt_row gt_right">33.33</td>
      <td style="color: #FFFFFF; background-color: #9653ca;" class="gt_row gt_left">coconut</td>
      <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">1.39</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #9e9e9e;" class="gt_row gt_right">444.4</td>
      <td style="color: #FFFFFF; background-color: #9e9e9e;" class="gt_row gt_left">durian</td>
      <td style="color: #FFFFFF; background-color: #9e9e9e;" class="gt_row gt_right">65100.0</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_data_color_simple_exibble_snap[polars]
  '''
  <tbody class="gt_table_body">
    <tr>
      <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">0.1111</td>
      <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_left">apricot</td>
      <td style="color: #FFFFFF; background-color: #010001;" class="gt_row gt_right">49.95</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #070304;" class="gt_row gt_right">2.222</td>
      <td style="color: #000000; background-color: #4cbd81;" class="gt_row gt_left">banana</td>
      <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">17.95</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #752b38;" class="gt_row gt_right">33.33</td>
      <td style="color: #FFFFFF; background-color: #9653ca;" class="gt_row gt_left">coconut</td>
      <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">1.39</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #9e9e9e;" class="gt_row gt_right">444.4</td>
      <td style="color: #FFFFFF; background-color: #9e9e9e;" class="gt_row gt_left">durian</td>
      <td style="color: #FFFFFF; background-color: #9e9e9e;" class="gt_row gt_right">65100.0</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_data_color_simple_exibble_snap[pyarrow]
  '''
  <tbody class="gt_table_body">
    <tr>
      <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">0.1111</td>
      <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_left">apricot</td>
      <td style="color: #FFFFFF; background-color: #010001;" class="gt_row gt_right">49.95</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #070304;" class="gt_row gt_right">2.222</td>
      <td style="color: #000000; background-color: #4cbd81;" class="gt_row gt_left">banana</td>
      <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">17.95</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #752b38;" class="gt_row gt_right">33.33</td>
      <td style="color: #FFFFFF; background-color: #9653ca;" class="gt_row gt_left">coconut</td>
      <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">1.39</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #9e9e9e;" class="gt_row gt_right">444.4</td>
      <td style="color: #FFFFFF; background-color: #9e9e9e;" class="gt_row gt_left">durian</td>
      <td style="color: #FFFFFF; background-color: #9e9e9e;" class="gt_row gt_right">65100.0</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_data_color_subset_domain[pandas]
  '''
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_right">0.1111</td>
      <td class="gt_row gt_left">apricot</td>
      <td style="color: #FFFFFF; background-color: #FF0000;" class="gt_row gt_right">49.95</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">2.222</td>
      <td class="gt_row gt_left">banana</td>
      <td style="color: #FFFFFF; background-color: #FF0000;" class="gt_row gt_right">17.95</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">33.33</td>
      <td class="gt_row gt_left">coconut</td>
      <td style="color: #FFFFFF; background-color: #FF0000;" class="gt_row gt_right">1.39</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">444.4</td>
      <td class="gt_row gt_left">durian</td>
      <td style="color: #FFFFFF; background-color: #FF0000;" class="gt_row gt_right">65100.0</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_data_color_subset_domain[polars]
  '''
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_right">0.1111</td>
      <td class="gt_row gt_left">apricot</td>
      <td style="color: #FFFFFF; background-color: #FF0000;" class="gt_row gt_right">49.95</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">2.222</td>
      <td class="gt_row gt_left">banana</td>
      <td style="color: #FFFFFF; background-color: #FF0000;" class="gt_row gt_right">17.95</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">33.33</td>
      <td class="gt_row gt_left">coconut</td>
      <td style="color: #FFFFFF; background-color: #FF0000;" class="gt_row gt_right">1.39</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">444.4</td>
      <td class="gt_row gt_left">durian</td>
      <td style="color: #FFFFFF; background-color: #FF0000;" class="gt_row gt_right">65100.0</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_data_color_subset_domain[pyarrow]
  '''
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_right">0.1111</td>
      <td class="gt_row gt_left">apricot</td>
      <td style="color: #FFFFFF; background-color: #FF0000;" class="gt_row gt_right">49.95</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">2.222</td>
      <td class="gt_row gt_left">banana</td>
      <td style="color: #FFFFFF; background-color: #FF0000;" class="gt_row gt_right">17.95</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">33.33</td>
      <td class="gt_row gt_left">coconut</td>
      <td style="color: #FFFFFF; background-color: #FF0000;" class="gt_row gt_right">1.39</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">444.4</td>
      <td class="gt_row gt_left">durian</td>
      <td style="color: #FFFFFF; background-color: #FF0000;" class="gt_row gt_right">65100.0</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_data_color_viridis_snap
  '''
  <tbody class="gt_table_body">
    <tr>
      <td style="color: #FFFFFF; background-color: #440154;" class="gt_row gt_right">1</td>
      <td style="color: #000000; background-color: #fde725;" class="gt_row gt_right">10</td>
      <td class="gt_row gt_left">one</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #3b518a;" class="gt_row gt_right">2</td>
      <td style="color: #000000; background-color: #5fc861;" class="gt_row gt_right">9</td>
      <td class="gt_row gt_left">two</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #22908c;" class="gt_row gt_right">3</td>
      <td style="color: #FFFFFF; background-color: #22908c;" class="gt_row gt_right">8</td>
      <td class="gt_row gt_left">three</td>
    </tr>
    <tr>
      <td style="color: #000000; background-color: #5fc861;" class="gt_row gt_right">4</td>
      <td style="color: #FFFFFF; background-color: #3b518a;" class="gt_row gt_right">7</td>
      <td class="gt_row gt_left">four</td>
    </tr>
    <tr>
      <td style="color: #000000; background-color: #fde725;" class="gt_row gt_right">5</td>
      <td style="color: #FFFFFF; background-color: #440154;" class="gt_row gt_right">6</td>
      <td class="gt_row gt_left">five</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_single_value_and_missing_pd
  '''
  <tbody class="gt_table_body">
    <tr>
      <td style="color: #FFFFFF; background-color: #FF0000;" class="gt_row gt_right">None</td>
      <td class="gt_row gt_right">3</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_single_value_and_missing_pl
  '''
  <tbody class="gt_table_body">
    <tr>
      <td style="color: #FFFFFF; background-color: #FF0000;" class="gt_row gt_center">None</td>
      <td class="gt_row gt_right">3</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_single_value_from_multiple_rows_pd
  '''
  <tbody class="gt_table_body">
    <tr>
      <td style="color: #FFFFFF; background-color: #008000;" class="gt_row gt_right">1.0</td>
      <td class="gt_row gt_right">3</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #FF0000;" class="gt_row gt_right">None</td>
      <td class="gt_row gt_right">4</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_single_value_from_multiple_rows_pl
  '''
  <tbody class="gt_table_body">
    <tr>
      <td style="color: #FFFFFF; background-color: #008000;" class="gt_row gt_right">1</td>
      <td class="gt_row gt_right">3</td>
    </tr>
    <tr>
      <td style="color: #FFFFFF; background-color: #FF0000;" class="gt_row gt_right">None</td>
      <td class="gt_row gt_right">4</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_single_value_pd
  '''
  <tbody class="gt_table_body">
    <tr>
      <td style="color: #FFFFFF; background-color: #008000;" class="gt_row gt_right">1</td>
      <td class="gt_row gt_right">3</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_single_value_pl
  '''
  <tbody class="gt_table_body">
    <tr>
      <td style="color: #FFFFFF; background-color: #008000;" class="gt_row gt_right">1</td>
      <td class="gt_row gt_right">3</td>
    </tr>
  </tbody>
  '''
# ---
